[gd_scene load_steps=4 format=3 uid="uid://cbybglk7i1jgh"]

[ext_resource type="Script" path="res://player/projectile.gd" id="1_vgfv6"]
[ext_resource type="PackedScene" uid="uid://bjwdned5lmo3e" path="res://assets/player/basic_projectile.aseprite" id="2_fu1xk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhgr5"]
size = Vector2(10, 6)

[node name="Projectile" type="StaticBody2D"]
script = ExtResource("1_vgfv6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vhgr5")

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="BasicProjectile" parent="." instance=ExtResource("2_fu1xk")]
scale = Vector2(0.3, 0.3)
offset = Vector2(0, 1)
region_rect = Rect2(58, 28, 31, 20)

[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_start_timer_timeout"]
